package reversi.model

data class Player(val playerColor: PlayerColor, val toggleTargets: Boolean = false)