@startuml
'https://plantuml.com/class-diagram

hide empty members

class Player
class Game
class Board <<(T)>>
class Position
enum Color
object Draw

Game -> Board : board
Game -> Color : owner
<> MapEntry
Board --> "*" MapEntry
MapEntry --> Position : key
Player <- MapEntry : value

Game --> GameState : state
GameState <|-- Run
Run -> Color : turn
Run <|-- RunPassed
GameState <|-- Draw
GameState <|-- Win
Win --> Color : winner

Clash <|-- ClashRun
Clash <|-- ClashRunLocal
ClashRun --> Game : game
ClashRun -> Name : name
ClashRun -> Player : side
ClashRunLocal --> Game: game
ClashRunLocal --> Player: side
Clash -> GameStorage : gs
class GameStorage <<(T)>>
@enduml